@@ -1240,6 +1240,25 @@ block|{
 comment|// first find best home - first strategy, sort by number of cores
 comment|// hosted where maxCoresPerNode is not violated
 specifier|final
+name|Integer
+name|maxCoreCount
+init|=
+operator|(
+name|Integer
+operator|)
+name|zkStateReader
+operator|.
+name|getClusterProps
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|ZkStateReader
+operator|.
+name|MAX_CORES_PER_NODE
+argument_list|)
+decl_stmt|;
+specifier|final
 name|String
 name|createUrl
 init|=
@@ -1248,6 +1267,8 @@ argument_list|(
 name|zkStateReader
 argument_list|,
 name|badReplica
+argument_list|,
+name|maxCoreCount
 argument_list|)
 decl_stmt|;
 if|if
@@ -1633,6 +1654,9 @@ name|zkStateReader
 parameter_list|,
 name|DownReplica
 name|badReplica
+parameter_list|,
+name|Integer
+name|maxCoreCount
 parameter_list|)
 block|{
 assert|assert
@@ -1675,11 +1699,7 @@ name|counts
 init|=
 operator|new
 name|HashMap
-argument_list|<
-name|String
-argument_list|,
-name|Counts
-argument_list|>
+argument_list|<>
 argument_list|()
 decl_stmt|;
 name|Set
@@ -1690,9 +1710,7 @@ name|unsuitableHosts
 init|=
 operator|new
 name|HashSet
-argument_list|<
-name|String
-argument_list|>
+argument_list|<>
 argument_list|()
 decl_stmt|;
 name|Set
@@ -1713,6 +1731,19 @@ operator|.
 name|getLiveNodes
 argument_list|()
 argument_list|)
+decl_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Integer
+argument_list|>
+name|coresPerNode
+init|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
 decl_stmt|;
 name|ClusterState
 name|clusterState
@@ -1875,6 +1906,49 @@ operator|.
 name|BASE_URL_PROP
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|coresPerNode
+operator|.
+name|containsKey
+argument_list|(
+name|baseUrl
+argument_list|)
+condition|)
+block|{
+name|Integer
+name|nodeCount
+init|=
+name|coresPerNode
+operator|.
+name|get
+argument_list|(
+name|baseUrl
+argument_list|)
+decl_stmt|;
+name|coresPerNode
+operator|.
+name|put
+argument_list|(
+name|baseUrl
+argument_list|,
+name|nodeCount
+operator|++
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|coresPerNode
+operator|.
+name|put
+argument_list|(
+name|baseUrl
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|baseUrl
@@ -2047,8 +2121,6 @@ name|ourReplicas
 operator|++
 expr_stmt|;
 block|}
-comment|// TODO: this is collection wide and we want to take into
-comment|// account cluster wide - use new cluster sys prop
 name|Integer
 name|maxShardsPerNode
 init|=
@@ -2091,13 +2163,15 @@ name|log
 operator|.
 name|debug
 argument_list|(
-literal|"collection={} node={} max shards per node={} potential hosts={}"
+literal|"collection={} node={} maxShardsPerNode={} maxCoresPerNode={} potential hosts={}"
 argument_list|,
 name|collection
 argument_list|,
 name|baseUrl
 argument_list|,
 name|maxShardsPerNode
+argument_list|,
+name|maxCoreCount
 argument_list|,
 name|cnt
 argument_list|)
@@ -2196,6 +2270,21 @@ operator|.
 name|collectionShardsOnNode
 operator|>=
 name|maxShardsPerNode
+operator|||
+operator|(
+name|maxCoreCount
+operator|!=
+literal|null
+operator|&&
+name|coresPerNode
+operator|.
+name|get
+argument_list|(
+name|baseUrl
+argument_list|)
+operator|>=
+name|maxCoreCount
+operator|)
 condition|)
 block|{
 name|counts
