@@ -424,9 +424,7 @@ name|results
 operator|=
 operator|new
 name|ArrayList
-argument_list|<
-name|Result
-argument_list|>
+argument_list|<>
 argument_list|()
 expr_stmt|;
 block|}
@@ -492,6 +490,8 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 decl_stmt|;
 name|assertNull
@@ -525,6 +525,8 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 name|assertNull
@@ -560,6 +562,8 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -575,7 +579,7 @@ name|result
 operator|=
 name|buildClusterState
 argument_list|(
-literal|"csr1R*r2-4sr3r4r5"
+literal|"csr1R*r2Fsr3r4r5"
 argument_list|,
 name|NODE1
 argument_list|,
@@ -597,17 +601,12 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 name|assertTrue
 argument_list|(
-name|createUrl
-operator|.
-name|equals
-argument_list|(
-name|NODE2_URL
-argument_list|)
-operator|||
 name|createUrl
 operator|.
 name|equals
@@ -644,6 +643,8 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -681,6 +682,8 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 name|assertTrue
@@ -768,12 +771,12 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 decl_stmt|;
-name|assertEquals
+name|assertNull
 argument_list|(
-literal|null
-argument_list|,
 name|createUrl
 argument_list|)
 expr_stmt|;
@@ -799,12 +802,12 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
-name|assertEquals
+name|assertNull
 argument_list|(
-literal|null
-argument_list|,
 name|createUrl
 argument_list|)
 expr_stmt|;
@@ -832,12 +835,12 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
-name|assertEquals
+name|assertNull
 argument_list|(
-literal|null
-argument_list|,
 name|createUrl
 argument_list|)
 expr_stmt|;
@@ -874,12 +877,12 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 decl_stmt|;
-name|assertEquals
+name|assertNull
 argument_list|(
-literal|null
-argument_list|,
 name|createUrl
 argument_list|)
 expr_stmt|;
@@ -909,6 +912,8 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -957,6 +962,8 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 decl_stmt|;
 name|assertEquals
@@ -999,6 +1006,8 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 decl_stmt|;
 name|assertEquals
@@ -1041,6 +1050,8 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 decl_stmt|;
 name|assertEquals
@@ -1085,6 +1096,8 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 decl_stmt|;
 name|assertEquals
@@ -1118,6 +1131,8 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -1164,12 +1179,12 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 decl_stmt|;
-name|assertEquals
+name|assertNull
 argument_list|(
-literal|null
-argument_list|,
 name|createUrl
 argument_list|)
 expr_stmt|;
@@ -1199,6 +1214,8 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -1234,6 +1251,8 @@ argument_list|,
 name|result
 operator|.
 name|badReplica
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -1241,6 +1260,223 @@ argument_list|(
 name|NODE2_URL
 argument_list|,
 name|createUrl
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testMaxCoresPerNode
+specifier|public
+name|void
+name|testMaxCoresPerNode
+parameter_list|()
+block|{
+name|Result
+name|result
+init|=
+name|buildClusterState
+argument_list|(
+literal|"csr*sr2"
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+name|NODE2
+argument_list|)
+decl_stmt|;
+name|String
+name|createUrl
+init|=
+name|OverseerAutoReplicaFailoverThread
+operator|.
+name|getBestCreateUrl
+argument_list|(
+name|result
+operator|.
+name|reader
+argument_list|,
+name|result
+operator|.
+name|badReplica
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|assertNull
+argument_list|(
+name|createUrl
+argument_list|)
+expr_stmt|;
+name|createUrl
+operator|=
+name|OverseerAutoReplicaFailoverThread
+operator|.
+name|getBestCreateUrl
+argument_list|(
+name|result
+operator|.
+name|reader
+argument_list|,
+name|result
+operator|.
+name|badReplica
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|createUrl
+argument_list|)
+expr_stmt|;
+name|result
+operator|=
+name|buildClusterState
+argument_list|(
+literal|"csr*sr2"
+argument_list|,
+literal|1
+argument_list|,
+literal|2
+argument_list|,
+name|NODE2
+argument_list|)
+expr_stmt|;
+name|createUrl
+operator|=
+name|OverseerAutoReplicaFailoverThread
+operator|.
+name|getBestCreateUrl
+argument_list|(
+name|result
+operator|.
+name|reader
+argument_list|,
+name|result
+operator|.
+name|badReplica
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|NODE2_URL
+argument_list|,
+name|createUrl
+argument_list|)
+expr_stmt|;
+name|result
+operator|=
+name|buildClusterState
+argument_list|(
+literal|"csr*sr2sr3sr4"
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+name|NODE2
+argument_list|,
+name|NODE3
+argument_list|,
+name|NODE4
+argument_list|)
+expr_stmt|;
+name|createUrl
+operator|=
+name|OverseerAutoReplicaFailoverThread
+operator|.
+name|getBestCreateUrl
+argument_list|(
+name|result
+operator|.
+name|reader
+argument_list|,
+name|result
+operator|.
+name|badReplica
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|createUrl
+argument_list|)
+expr_stmt|;
+name|createUrl
+operator|=
+name|OverseerAutoReplicaFailoverThread
+operator|.
+name|getBestCreateUrl
+argument_list|(
+name|result
+operator|.
+name|reader
+argument_list|,
+name|result
+operator|.
+name|badReplica
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|createUrl
+argument_list|)
+expr_stmt|;
+name|result
+operator|=
+name|buildClusterState
+argument_list|(
+literal|"csr*sr2sr3sr4"
+argument_list|,
+literal|1
+argument_list|,
+literal|2
+argument_list|,
+name|NODE2
+argument_list|,
+name|NODE3
+argument_list|,
+name|NODE4
+argument_list|)
+expr_stmt|;
+name|createUrl
+operator|=
+name|OverseerAutoReplicaFailoverThread
+operator|.
+name|getBestCreateUrl
+argument_list|(
+name|result
+operator|.
+name|reader
+argument_list|,
+name|result
+operator|.
+name|badReplica
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|createUrl
+operator|.
+name|equals
+argument_list|(
+name|NODE3_URL
+argument_list|)
+operator|||
+name|createUrl
+operator|.
+name|equals
+argument_list|(
+name|NODE4_URL
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -1867,9 +2103,7 @@ literal|1
 argument_list|,
 operator|new
 name|HashSet
-argument_list|<
-name|String
-argument_list|>
+argument_list|<>
 argument_list|(
 name|Arrays
 operator|.
